--- a/one-man-studio-website/src/App.css
+++ b/one-man-studio-website/src/App.css
@@ -3,14 +3,19 @@ body{
     margin: 0px;
     padding: 0px;
     height: 100%;
+    overflow-y: hidden; /* Hide vertical scrollbar */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 .LogoFont{
-    color: #E88600;
+    color: #0B2A3F;
     font-size: 70px;
     padding: 0px;
     margin: 0px;
     font-family: 'Gill Sans Nova Cond Ultra Bold', sans-serif;
-    mix-blend-mode: exclusion;
+    /*mix-blend-mode: exclusion;*/
+    position: relative;
+    bottom: 20px;
+    right: 10px;
 }
 .link{
     color: #0B2A3F;
