--- a/one-man-studio-website/src/components/GameContent/gameContent.css
+++ b/one-man-studio-website/src/components/GameContent/gameContent.css
@@ -12,14 +12,34 @@
     height: 100%;
     width: 100%;
 }
-.GameView.ImageContainer{
+.GameView .ImageContainer{
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: 150px 1fr;
 }
-.GameView.ImageContainer h2{
-    color: #ffa101;
+.GameView .ImageContainer .gameTitle h2{
+    color: #3591db;
     font-family: 'Gill Sans Nova Cond Ultra Bold', sans-serif;
-    font-size: 25px;
+    font-size: 40px;
+}
+.GameView .ImageContainer img{
+    justify-self: center;
+    border-radius: 20px;
+    border: 4px solid #5ab5ff3d;
+    border-top-width: 20px;
+}
+.GameView .ImageContainer .gameTitle{
+    width: auto;
+    height: 30px;
+    background-color: #5ab5ff3d;
+    justify-self: center;
+    margin-top: 120px;
+    border-radius: 10px 10px 0px 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.GameView .ImageContainer .gameTitle h2{
     text-align: center;
+    margin: 0px;
+    margin-top: 0px;
 }
