--- a/one-man-studio-website/src/components/GameListShowcase/gameList.css
+++ b/one-man-studio-website/src/components/GameListShowcase/gameList.css
@@ -31,7 +31,7 @@
     border-radius: 10px 10px 0px 0px;
 }
 .GameTitle h1{
-    color: #ffa101;
+    color: #3591db;
     font-family: 'Gill Sans Nova Cond Ultra Bold', sans-serif;
     font-size: 25px;
     text-align: center;
