--- a/one-man-studio-website/src/components/GameContent/gameContent.css
+++ b/one-man-studio-website/src/components/GameContent/gameContent.css
@@ -25,10 +25,10 @@
 .GameView .ImageContainer img{
     justify-self: center;
     border-radius: 20px;
-    border: 4px solid #5ab5ff3d;
+    border: 4px solid #2a475e;
     border-top-width: 20px;
 }
-.GameView .ImageContainer .gameTitle{
+.gameTitle{
     width: auto;
     height: 30px;
     background-color: #5ab5ff3d;
@@ -37,8 +37,9 @@
     border-radius: 10px 10px 0px 0px;
     padding-left: 20px;
     padding-right: 20px;
+    z-index: 10;
 }
-.GameView .ImageContainer .gameTitle h2{
+.gameTitle h2{
     text-align: center;
     margin: 0px;
     margin-top: 0px;
@@ -50,10 +51,13 @@
     grid-template-rows: auto 2fr 1fr;
 }
 .StatsTitle{
-    width: auto;
-    height: 30px;
+    width: fit-content;
+    height: auto;
     background-color: #5ab5ff3d;
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 10px;
+    justify-self: center;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 .StatsTitle h1{
     color: #3591db;
@@ -77,6 +81,7 @@
     float: right;
     border-radius: 10px 0px 0px 10px;
     text-align: center;
+    white-space: nowrap;
 }
 .Stat h1{
     color: #3591db;
@@ -90,4 +95,20 @@
     margin-top: 15px;
     padding-left: 20px;
     padding-right: 20px;
+}
+.gameImg{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+}
+.gameImg .arrow{
+    --arrow-size: 5rem;
+}
+.gameImg a{
+    align-self: center;
+}
+.gameImg img{
+    max-height: 450px;
 }
