--- a/one-man-studio-website/src/components/GameListShowcase/gameList.css
+++ b/one-man-studio-website/src/components/GameListShowcase/gameList.css
@@ -25,7 +25,7 @@
 
     transform: perspective(1500px) rotateY(15deg);
     border-radius: 1rem;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    box-shadow: rgb(102 192 244) 0px 25px 50px -12px;
     transition: transform 1s ease 0s;
   
     &:hover {
