--- a/one-man-studio-website/src/components/GameContent/gameContent.css
+++ b/one-man-studio-website/src/components/GameContent/gameContent.css
@@ -1,10 +1,3 @@
-.GameContentContainer{
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 4fr 1fr;
-    width: 100%;
-    height: 100%;
-}
 .GameView{
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -12,17 +5,17 @@
     height: 100%;
     width: 100%;
 }
-.GameView .ImageContainer{
+.ImageContainer{
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 150px 1fr;
+    grid-template-rows: 600px 1fr;
 }
-.GameView .ImageContainer .gameTitle h2{
+.ImageContainer .gameTitle h2{
     color: #3591db;
     font-family: 'Gill Sans Nova Cond Ultra Bold', sans-serif;
     font-size: 40px;
 }
-.GameView .ImageContainer img{
+.gameImg img{
     justify-self: center;
     border-radius: 20px;
     border: 4px solid #2a475e;
@@ -33,7 +26,7 @@
     height: 30px;
     background-color: #5ab5ff3d;
     justify-self: center;
-    margin-top: 120px;
+    margin-top: 100px;
     border-radius: 10px 10px 0px 0px;
     padding-left: 20px;
     padding-right: 20px;
@@ -48,7 +41,7 @@
     margin-top: 90px;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: auto 2fr 1fr;
+    grid-template-rows: auto auto 1fr;
 }
 .StatsTitle{
     width: fit-content;
@@ -68,6 +61,7 @@
 }
 .Stats{
     margin-top: 50px;
+    margin-bottom: 70px;
     display: flex;
     flex-direction: column;
     justify-items: center;
@@ -102,13 +96,50 @@
     height: 100%;
     width: 100%;
     justify-content: center;
-}
-.gameImg .arrow{
-    --arrow-size: 5rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 .gameImg a{
     align-self: center;
 }
 .gameImg img{
+    min-width: 400px;
+    max-width: 90%;
+    min-height: 100px;
     max-height: 450px;
+    box-shadow: rgba(102, 192, 244, 0.308) 0px 25px 50px -12px;
+    border-radius: 0.5em;
+    z-index: 2;
+}
+.ImageSelections{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 50px;
+    justify-content: center;
+}
+.ImageSelections img{
+    width: 10vw;
+    height: 10vh;
+    border-radius: 10px;
+    transform:
+        perspective(750px)
+        translate3d(0px, 0px, -250px)
+        rotateX(27deg)
+        scale(1, 1);
+    border-radius: 20px;
+    box-shadow: 0 70px 40px -20px rgba(0, 0, 0, 0.2);
+    transition: 0.4s ease-in-out transform;
+    margin-top: 4px;
+    &:hover {
+        transform: translate3d(0px, 0px, -250px);
+        cursor: pointer;
+    }
+}
+.SelectedImgStyle{
+    margin: 0px !important;
+    margin-left: -4px !important;
+    border: 4px solid #2a475e;
+    box-shadow: rgba(102, 192, 244, 0.308) 0px 25px 50px -12px !important;
 }
