--- a/one-man-studio-website/src/components/GameListShowcase/gameList.css
+++ b/one-man-studio-website/src/components/GameListShowcase/gameList.css
@@ -30,6 +30,7 @@
   
     &:hover {
       transform: perspective(3000px) rotateY(5deg);
+      cursor: pointer;
     }
 }
 .GameContainer img{
@@ -50,22 +51,4 @@
     font-family: 'Gill Sans Nova Cond Ultra Bold', sans-serif;
     font-size: 25px;
     text-align: center;
-}
-.SocialMediaLinks{
-    margin-top: 60px;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto 1fr;
-}
-.SocialMediaLinks h3{
-    color: #5ab5ff3d;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-.SocialMediaTitle{
-    background-color: #5ab5ff3d;
-    border-radius: 10px;
-    justify-self: center;
-    align-self: center;
-    height: fit-content;
 }
